setting up new color scheme

--- a/public/style copy.css
+++ b/public/style copy.css
@@ -3,31 +3,33 @@
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap"); /* used for 404 */
 
 :root {
-  --brand-blue-m2: #ffffff;
-  --brand-blue-m1: #ffffff;
-  --brand-blue: #ffffff;
-  --brand-blue-p1: #ffffff;
-  --brand-blue-p2: #ffffff;
-
   /* other brand color */
+  /* layout colors */
 
-  --interactive-color-m1: #ffffff;
-  --interactive-color: #ffffff;
-  --interactive-color-p1: #ffffff;
+  --brand-blue-m2: #0070C1;
+  --brand-blue-m1: #0D5A91;
+  --brand-blue: #0A3D62;
+  --brand-blue-p1: #143750;
+  --brand-blue-p2: #142837;
 
-  --info-color: #ffffff;
-  --warning-color: #ffffff;
-  --danger-color: #ffffff;
-  --success-color: #ffffff;
+  --interactive-color-m1:#44A2E6;
+  --interactive-color: #1D84CE;
+  --interactive-color-p1:#356588;
 
-  --dark-shade-m1: #ffffff;
-  --dark-shade: #ffffff;
-  --dark-shade-p1: #ffffff;
+  --info-color: #0CAADC;
+  --warning-color: #FF7729;
+  --danger-color: #FF3348;
+  --success-color: #0CF574;
+
+  --dark-shade-m1: #292929;
+  --dark-shade: #1E1E1E;
+  --dark-shade-p1: #111111;
   
-  --light-shade-m1: #ffffff;
-  --light-shade: #ffffff;
-  --light-shade-p1: #ffffff;
+  --light-shade-m1: #F8F8F8;
+  --light-shade: #EEECEC;
+  --light-shade-p1: #D6D6D6;
 
+          /* OLD */
   --color-shade-1: #93bedf;
   --color-shade-2: #3498db;
   --color-shade-3: #465775;
@@ -1335,7 +1337,7 @@ td a {
 
 .container-blogx {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+  /*grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));*/
   border-radius: 10px;
 }
 
@@ -1344,7 +1346,7 @@ td a {
   display: flex;
   flex-direction: column;
   position: relative;
-  margin: 10px;
+  /*margin: 10px;*/
   padding: 25px;
   box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.75),
     -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
@@ -1399,11 +1401,11 @@ td a {
 }
 
 .blog-no-overlay-wrapper {
-
+  padding: 20px;
 }
 
 .blog-no-overlay {
-  
+  padding: 15px; 
 }
 
 .blog-overlay-wrapper {
