--- a/views/About.ejs
+++ b/views/About.ejs
@@ -134,7 +134,7 @@
             </div>
             <div class="col-6 offset-3 mb-3 mt-3">
               <img id="loader" src="/img/loader.gif">
-              <input type="submit" class="logbtn" value="Load more" onclick="infiniteBlogs();">
+              <input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteBlogs();">
             </div>
         </section>
       </div>
