--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -8,12 +8,14 @@
   <div class="blog-row">
     <b id="alertEmpty" <% if (locals.totalPrice != 0) { %> style="display: none;" <% } %>>Votre panier est vide!</b>
     <% if(locals.products){ %>
-      <div class="cart-row">
-        <span class="cart-item cart-header cart-column">ITEM</span>
-        <span class="cart-quantity cart-header cart-column">QUANTITÉ</span>
-        <span class="cart-price cart-header cart-column">PRIX</span>
-      </div>
-     
+      <% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
+        <div class="cart-row" id="cart-row-header">
+          <span class="cart-item cart-header cart-column">ITEM</span>
+          <span class="cart-quantity cart-header cart-column">QUANTITÉ</span>
+          <span class="cart-price cart-header cart-column">PRIX</span>
+        </div>
+      <% } %>
+
       <% Object.keys(locals.products).forEach(function (index) { %>
         <div class="cart-row cart-row-item" id="<%= locals.products[index].item._id %>">
           <div class="cart-item cart-column">
@@ -98,26 +100,24 @@
               <div class="col-md-6">
                 <textarea id="instructions" class="instructions-textarea" name="instructions" placeholder="Door code or other useful informations..." readonly><% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %></textarea>
               </div>
+              <% } %>
 
-              <div class="col-md-6">
-                <div class="payment-div p-3">
-                  <% if (locals.totalPrice != 0){ %>
+              <% if (locals.totalPrice != 0 && locals.totalQty != 0){ %>
+                <div class="col-md-6">
+                  <div class="payment-div p-3">
                     <span id="total-price-span">PRIX TOTAL: <b id="total-price"><%= locals.totalPrice %>€</b></span>
-                  <% } %>
-                  <% if (locals.totalQty != 0){ %>
                     <span id="total-qty-span">QUANTITÉ TOTALE: <b id="total-qty"><%= locals.totalQty %></b></span>
-                  <% } %>
-                  <% if (locals.totalPrice != 0){ %>
                     <button class="btn-purchase" onclick="submitCheckout();" type="button" id="purchase">Continuer</button>
-                  <% } %>
+                  </div>
                 </div>
-              </div>
+              <% } %>
+              <% if(locals.isDelivery){ %>
             </div>
           </div>
         </div>
       </div>
       <% } %>
-      <div class="col-md-6"><!-- duplicate from above !isDelivery -->
+      <!-- <div class="col-md-6">duplicate from above !isDelivery 
         <div class="payment-div p-3">
           <% if (locals.totalPrice != 0){ %>
             <span id="total-price-span">PRIX TOTAL: <b id="total-price"><%= locals.totalPrice %>€</b></span>
@@ -128,7 +128,7 @@
           <% if (locals.totalPrice != 0){ %>
             <button class="btn-purchase" onclick="submitCheckout();" type="button" id="purchase">Continuer</button>
           <% } %>
-        </div>
+        </div>-->
       </div>
   </div>
 </div>
