--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -28,7 +28,7 @@
   </div>
   <div class="col-6 offset-3 mb-3 mt-3">
     <img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none">
-    <input type="submit" class="logbtn" value="Load more" onclick="infiniteGalleries();">
+    <input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteGalleries();">
   </div>
 </div>
 
