--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -64,7 +64,7 @@
           </div>
           <div class="col-6 offset-3 mt-5">
             <img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none">
-            <input id="load" type="submit" class="logbtn" value="Load more" onclick="infiniteShopItems('original');">
+            <input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteShopItems('original');">
           </div>
       </div>
       
