--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -34,10 +34,12 @@
       <% }) %>
     <% } %>
   </div>
+  <% if (!locals.error) { %>
   <div class="col-6 offset-3 mb-3 mt-3">
     <img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none">
-    <input type="submit" class="logbtn" value="Load more" onclick="infiniteTags();">
+    <input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteTags();">
   </div>
+  <% } %>
 </div>
 
 <script>
