--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -93,7 +93,7 @@
               <a href="/api/auth/logout" class="navbar-text">Déconnexion</a>
             </li>
             <% } %>
-            <li>
+            <li id="cart-qty-li">
               <a
                 href="/shopping-cart"
                 class="navbar-text <%= (locals.active && locals.active == 'Cart') ? 'active' : '' %>"
