--- a/views/About.ejs
+++ b/views/About.ejs
@@ -101,36 +101,37 @@
         <section class="blog-section">
             <script src="/scripts/blog/infiniteBlogs.js"></script>
             <div class="container container-blogx" id="container-blog">
-              <% if(locals.blogs){ %>
-                <% Object.keys(locals.blogs).forEach(function (index) { %>
-                    <div class="blog-row col-10 offset-1" id="<%= locals.blogs[index]._id %>">
-                      <h3 class="blog-titlex"><a href="/Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].shorttitle %>...</a></h3> 
-                      <p class="blog-info">posté par 
-                        <b class="blog-author"><%= locals.blogs[index].author %></b>,
-                        <i class="blog-date"><%= locals.blogs[index].date %></i>
-                      </p>
-                      <hr />
+              <div class="col-10 offset-1 blog-wrapper">
+                <% if(locals.blogs){ %>
+                  <% Object.keys(locals.blogs).forEach(function (index) { %>
+                      <div class="blog-row" id="<%= locals.blogs[index]._id %>">
+                        <h3 class="blog-title"><a href="/Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].shorttitle %>...</a></h3> 
+                        <p class="blog-info">posté par 
+                          <b class="blog-author"><%= locals.blogs[index].author %></b>,
+                          <i class="blog-date"><%= locals.blogs[index].date %></i>
+                        </p>
 
-                    <% if (locals.blogs[index].mainImgId) { %>
-                      <div class="blog-overlay-wrapper">
-                        <img class="blog-img" src="/api/image/<%= locals.blogs[index].mainImgId %>">
-                        <div class="blog-overlay">
-                          <p><%= locals.blogs[index].shortcontent %>...</p>
-                          <form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">Lire plus</button></form>
+                      <% if (locals.blogs[index].mainImgId) { %>
+                        <div class="blog-overlay-wrapper">
+                          <img class="blog-img" src="/api/image/<%= locals.blogs[index].mainImgId %>">
+                          <div class="blog-overlay">
+                            <p><%= locals.blogs[index].shortcontent %>...</p>
+                            <form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">Lire plus</button></form>
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <% } else { %>
-                      <div class="blog-no-overlay-wrapper">
-                        <div class="blog-no-overlay">
-                          <p><%= locals.blogs[index].shortcontent %>...</p>
-                          <form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">Lire plus</button></form>
+                      <% } else { %>
+                        <div class="blog-no-overlay-wrapper">
+                          <div class="blog-no-overlay">
+                            <p><%= locals.blogs[index].shortcontent %>...</p>
+                            <form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">Lire plus</button></form>
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <% } %>
-                <% }) %>
-              <% } %>
+                      <% } %>
+                  <% }) %>
+                <% } %>
+              </div>
             </div>
             <div class="col-6 offset-3 mb-3 mt-3">
               <img id="loader" src="/img/loader.gif">
