--- a/views/About.ejs
+++ b/views/About.ejs
@@ -53,15 +53,14 @@
             <!--<div class="section-heading mt-3">
                 <h2>Maral Abkarian</h2>
             </div>-->
-            <div class="biography">
-                <div class="bio-square">
+            <div class="biography col-10 offset-1">
+                <div class="bio-square square-first">
                     <img class="square-img" src="https://i.imgur.com/4rBbPSy.png" style="float: left"/>
                     <h1 class="square-title" style="font-size: 40px;">Maral Abkarian</h1>
                     <p class="square-txt">
                       Née durant la seconde moitié du XXème siècle, élevée entre Orient du Levant et Occident tricolore,
                       établie sur trois continents, Maral a dans la continuité de ses ancêtres déracinés de leur terre natale par le génocide arménien en 1915,
                       vécu dans différentes contrées à travers le monde.
-
                     </p>
                 </div>
                 <div class="bio-square">
@@ -81,7 +80,7 @@
                       française, anglo-saxonne, arabo-levantine, arméno-anatolienne et hellénique. 
                     </p class="square-txt">
                 </div>
-                <div class="bio-square mt-1">
+                <div class="bio-square square-last">
                     <p class="square-txt">
                       Sa quête artistique est celle d’un beau naturel, dépouillé vers une authenticité directe et accessible à tous,
                       à l’image de son hypersensibilité, spirituelle. Les figures gracieuses, le partage et l’âpreté de la vie humaine sont mises à nues dans son travail, 
