--- a/public/style.css
+++ b/public/style.css
@@ -900,7 +900,7 @@ div.carousel-item.active {
 }
 
 .wrapper {
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: var(--light-shade);
   box-shadow: 2px 2px 10px 1px rgba(42, 67, 111, 0.67), -2px -2px 10px 1px rgba(10, 25, 49, 0.23);
   padding: 15px 30px;
@@ -1064,27 +1064,29 @@ div.carousel-item.active {
 }
 
 .bio-section {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+
 }
 
 .biography {
-  display: grid;
-  /*flex-grow: 1;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: auto;*/
-  padding: 10px;
-  margin: 20px 10px;
-  box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.75),
-    -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
+  padding: 10px 13px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .bio-square {
-  background-color: #e8e8e8;
+  background-color: var(--light-shade);
   height: 90%;
-  margin: 0 15px 0px 15px;
   padding: 30px;
+  margin: 10px 0;
+}
+
+.square-first {
+  border-radius: 5px 5px 0 0;
+  margin-top: 1px;
+}
+
+.square-last {
+  border-radius: 0 0 5px 5px;
 }
 
 .square-title {
