--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -26,7 +26,7 @@
                         </div>
                      
                         <div class="col-6">
-                          <input type="submit" class="logbtn cart-btn" value="Ajouter au panier" onclick="cartAdd('<%= locals.original[index]._id %>', this)">
+                          <input type="submit" class="logbtn" value="Ajouter au panier" onclick="cartAdd('<%= locals.original[index]._id %>', this)">
                         </div>
                       </div>
                     </div>
@@ -54,7 +54,7 @@
                           <% } %>
                         </div>
                         <div class="col-6">
-                          <input type="submit" class="logbtn cart-btn" value="Ajouter au panier" onclick="cartAdd('<%= locals.print[index]._id %>', this)">
+                          <input type="submit" class="logbtn" value="Ajouter au panier" onclick="cartAdd('<%= locals.print[index]._id %>', this)">
                         </div>
                       </div>
                     </div>
@@ -65,7 +65,7 @@
           </div>
           </div>
           <div class="col-6 offset-3 mt-5">
-            <img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none">
+            <img id="loader" src="/img/loader.gif">
             <input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteShopItems('original');">
           </div>
       </div>
