changing single page using blog row class, changing design, changing alerts color

--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -5,7 +5,7 @@
 <script src="/scripts/cart.js"></script>
 
 <div class="container container-single"> 
-  <div class="blog-row">
+  <div class="single-wrapper">
     <b class="alertEmpty" id="alertEmpty" <% if (locals.totalPrice != 0) { %> style="display: none;" <% } %>>Votre panier est vide!</b>
     <% if(locals.products){ %>
       <% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
