--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -6,7 +6,10 @@
 
 <div class="container container-single"> 
   <div class="single-wrapper">
-    <b class="alertEmpty" id="alertEmpty" <% if (locals.totalPrice != 0) { %> style="display: none;" <% } %>>Votre panier est vide!</b>
+    <div class="col-10 offset-1">
+      <div class="text-center">
+        <b class="alertEmpty text-center" id="alertEmpty" <% if (locals.totalPrice != 0) { %> style="display: none;" <% } %>>Votre panier est vide!</b>
+      </div>
     <% if(locals.products){ %>
       <% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
         <div class="cart-row" id="cart-row-header">
@@ -31,7 +34,7 @@
             <% if (locals.products[index].item.isUnique === true) { %>
               <!--<h4 class="cart-item-qty"><b><%= locals.products[index].qty %></b></h4>-->
               <input id="qty-<%= locals.products[index].item._id %>" class="cart-item-qty form-control" value="<%= locals.products[index].qty %>" name="cart-item-qty" title="Numbers only" readonly>
-              <i class="fas fa-plus fa-2x qty-update" min="0" style="color: grey; cursor: default;"></i>
+              <i class="fas fa-plus fa-2x qty-update" min="0" style="color: var(--dark-shade-m1); cursor: default;"></i>
             <% } else { %>
               <input id="qty-<%= locals.products[index].item._id %>" class="cart-item-qty form-control" value="<%= locals.products[index].qty %>" name="cart-item-qty" title="Numbers only" onchange="updateValue(event, this)">
               <!-- step="1" min="0" ou 1 max="99" onkeydown="return false; type="number" pattern="[0-9]""-->
@@ -103,7 +106,7 @@
               <% } %>
 
               <% if (locals.totalPrice != 0 && locals.totalQty != 0){ %>
-                <div class="col-md-6">
+                <div class="col-md-6 offset-3 mt-4">
                   <div class="payment-div p-3">
                     <span id="total-price-span">PRIX TOTAL: <b id="total-price"><%= locals.totalPrice %>€</b></span>
                     <span id="total-qty-span">QUANTITÉ TOTALE: <b id="total-qty"><%= locals.totalQty %></b></span>
@@ -130,6 +133,7 @@
           <% } %>
         </div>-->
       </div>
+    </div>
   </div>
 </div>
 
