--- a/views/restricted/Order-manage.ejs
+++ b/views/restricted/Order-manage.ejs
@@ -2,31 +2,34 @@
 
 <script src="/scripts/order.js"></script>
 <div class="container container-single"> 
-  <div class="blog-row">
-    <h1 class="text-center">Gérer une commande</h1>
-    <% if (locals.order) { %>
-      Identifiant de commande: <b><%= locals.order._id %></b>
-      Prix total: <b><%= locals.order.price %>€</b>
-      <form id="statusform" method="POST" action="/api/order/update">
-        <div class="form-group">
-          <label class="control-label" for="selectStatus">Status de la commande</label>
-          <select class="form-control" name="status" id="selectStatus">
-            <option <% if (locals.order.status == "Validated") {%> selected disabled <% } %> value="Validated">Validated</option>
-            <option <% if (locals.order.status == "Shipping") {%> selected disabled <% } %> value="Shipping">Shipping</option>
-            <option <% if (locals.order.status == "Delivered") {%> selected disabled <% } %> value="Delivered">Delivered</option>
-            <option <% if (locals.order.status == "Cancelled") {%> selected disabled <% } %> <% if (locals.order.status != "Validated") {%> disabled <% } %> value="Cancelled">Cancelled</option>
-          </select>
-          <input type="hidden" name="orderId" value="<%= locals.order._id %>">
-          <input type="submit" class="logbtn" value="Update" id="submit-statusform">
-        </div>
-      </form>
-      <% if (locals.order.status === "Validated") { %> <!-- need better condition here -->
-        <i style="color:red; cursor: pointer" onclick="cancelOrder('<%= locals.order._id %>')" class="far fa-times-circle">ANNULER LA COMMANDE</i><br />
-    <% } %>
-    <hr />
+  <div class="single-wrapper">
+    <div class="col-10 offset-1">
+      <div class="manage-order">
+        <h1 class="text-center">Gérer une commande</h1>
+        <% if (locals.order) { %>
+          Identifiant de commande: <b><%= locals.order._id %></b>
+          Prix total: <b><%= locals.order.price %>€</b>
+          <form id="statusform" method="POST" action="/api/order/update">
+            <div class="form-group">
+              <label class="control-label" for="selectStatus">Status de la commande</label>
+              <select class="form-control" name="status" id="selectStatus">
+                <option <% if (locals.order.status == "Validated") {%> selected disabled <% } %> value="Validated">Validated</option>
+                <option <% if (locals.order.status == "Shipping") {%> selected disabled <% } %> value="Shipping">Shipping</option>
+                <option <% if (locals.order.status == "Delivered") {%> selected disabled <% } %> value="Delivered">Delivered</option>
+                <option <% if (locals.order.status == "Cancelled") {%> selected disabled <% } %> <% if (locals.order.status != "Validated") {%> disabled <% } %> value="Cancelled">Cancelled</option>
+              </select>
+              <input type="hidden" name="orderId" value="<%= locals.order._id %>">
+              <input type="submit" class="logbtn" value="Update" id="submit-statusform">
+            </div>
+          </form>
+          <% if (locals.order.status === "Validated") { %> <!-- need better condition here -->
+            <i style="color:red; cursor: pointer" onclick="cancelOrder('<%= locals.order._id %>')" class="far fa-times-circle">ANNULER LA COMMANDE</i><br />
+        <% } %>
+        <hr />
+      </div>
 
     <% if(locals.order.items){ %>
-      <div class="cart-row">
+      <div class="cart-row" id="cart-row-header">
         <span class="cart-item cart-header cart-column">ITEM</span>
         <span class="cart-quantity cart-header cart-column">QUANTITY</span>
         <span class="cart-price cart-header cart-column">PRICE</span>
@@ -109,6 +112,7 @@
       </div>
     </div>
   <% } %>
+</div>
   </div>
 </div>
   
