--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -44,6 +44,7 @@
 
           <div class="cart-price cart-column">
             <p class="cart-item-price"><b><%= locals.products[index].price %>€</b></p>
+            <p class="cart-item-unitprice"><b><%= locals.products[index].item.price %>€/Unité</b></p>
           </div>
       </div>
       <% }) %>
